c/examples/writing-a-c-compiler-tests/tests/chapter_12/invalid_parse/bad_specifiers_2.c
int main(void) {
    /* Can't include the same specifier twice */
    unsigned long unsigned i = 0;
    return 0;
}